# Reference_Image_Mapper

./: README.md  setup.cfg  setup.py
documentation/: main.py  main_cluster_lot.py
mappedGazeOutput/: mappedGaze__gaze.csv
src/reference_image_mapper/: __init__.py  main.py
src/reference_image_mapper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/reference_image_mapper/gluestick/: geometry.py  run.py
src/reference_image_mapper/gluestick/models/: base_model.py  superpoint.py  two_view_pipeline.py
src/reference_image_mapper/pytlsd/pytlsd.egg-info/: PKG-INFO  SOURCES.txt
src/test/: main_test.py
src/test/output_test/: mappedGaze__gaze.csv
