[metadata]
name = reference_image_mapper
version = 0.1
author = Dr UDM
author_email = dr.udm.darcy@gmail.com
maintainer = Dr UDM
description = Reference Image Mapper
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.6
install_requires =  
    build  
    func-timeout     
    holoviews 
    matplotlib         
    numpy                
    setuptools
    omegaconf==2.2.*    
    opencv-python==4.7.0.*
    scikit-learn     
    scipy
    seaborn          
    typing          
    torch>=1.12         
    torchvision>=0.13  
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

#  opencv-python==4.7.0.*